--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TO-DO LIST</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/icon-x" href="images/icon.png"></link>
   </head>
   <body style="background-color: aqua;">
     <div class="container">
